export const snapshot = {};

snapshot[`nu / alpine / add 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=alpine&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / alpine / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=alpine&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / alpine / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/list?sysOsPlat=linux&sysOs=alpine&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / alpine / out 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/outdated?sysOsPlat=linux&sysOs=alpine&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / alpine / rem 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/remove/firefox?sysOsPlat=linux&sysOs=alpine&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / alpine / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/sync?sysOsPlat=linux&sysOs=alpine&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / alpine / tidy 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/tidy?sysOsPlat=linux&sysOs=alpine&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / add 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/list?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / out 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/outdated?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / rem 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/remove/firefox?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/sync?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / add (shell group) — wide 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/shell?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / rem (shell group) — pinpoint 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/remove/shell?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / tidy 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/tidy?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / rocky / add 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=rocky&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / rocky / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=rocky&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / rocky / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/list?sysOsPlat=linux&sysOs=rocky&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / rocky / out 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/outdated?sysOsPlat=linux&sysOs=rocky&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / rocky / rem 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/remove/firefox?sysOsPlat=linux&sysOs=rocky&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / rocky / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/sync?sysOsPlat=linux&sysOs=rocky&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / rocky / tidy 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/tidy?sysOsPlat=linux&sysOs=rocky&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / ubuntu / add 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=ubuntu&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / ubuntu / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=ubuntu&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / ubuntu / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/list?sysOsPlat=linux&sysOs=ubuntu&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / ubuntu / out 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/outdated?sysOsPlat=linux&sysOs=ubuntu&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / ubuntu / rem 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/remove/firefox?sysOsPlat=linux&sysOs=ubuntu&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / ubuntu / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/sync?sysOsPlat=linux&sysOs=ubuntu&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / ubuntu / tidy 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/tidy?sysOsPlat=linux&sysOs=ubuntu&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / void / add 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=void&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / void / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=void&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / void / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/list?sysOsPlat=linux&sysOs=void&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / void / out 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/outdated?sysOsPlat=linux&sysOs=void&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / void / rem 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/remove/firefox?sysOsPlat=linux&sysOs=void&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / void / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/sync?sysOsPlat=linux&sysOs=void&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / void / tidy 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/tidy?sysOsPlat=linux&sysOs=void&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / suse / add 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=suse&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / suse / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=suse&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / suse / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/list?sysOsPlat=linux&sysOs=suse&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / suse / out 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/outdated?sysOsPlat=linux&sysOs=suse&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / suse / rem 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/remove/firefox?sysOsPlat=linux&sysOs=suse&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / suse / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/sync?sysOsPlat=linux&sysOs=suse&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / suse / tidy 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/tidy?sysOsPlat=linux&sysOs=suse&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / add 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/firefox?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/find/firefox?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/list?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / out 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/outdated?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / rem 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/remove/firefox?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/sync?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / tidy 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/tidy?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / add 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/firefox?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/find/firefox?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/list?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / out 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/outdated?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / rem 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/remove/firefox?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/sync?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / tidy 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/tidy?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / find (no names) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/find?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / find (no names) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/find?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / find (-m apt) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/--manager/apt/find?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / find (-m yay) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/--manager/yay/find?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / add (claude) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/claude?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / add (claude) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/claude?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / add (rust) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/rust?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / arch / add (nushell) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/nushell?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / ubuntu / add (nushell) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/nushell?sysOsPlat=linux&sysOs=ubuntu&sysOsLike=debian&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / add (ai-code) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/ai-code?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / no-sys / add 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/pack/add/firefox'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.SYS_CPU_ARCH = match (uname | get machine | str lowercase) {
  arm64 => 'aarch64',
  amd64 => 'x86_64',
  \$x => \$x,
}
\$env.REQ_URL_SH = \$"(\$env.REQ_URL_SH)?sysCpuArch=(\$env.SYS_CPU_ARCH)"

let _raw_vend = sys cpu | first | get name | str lowercase
\$env.SYS_CPU_VEND = match \$_raw_vend {
  \$x if (\$x | str starts-with amd) => 'amd',
  \$x if (\$x | str starts-with apple) => 'apple',
  \$x if (\$x | str starts-with arm) => 'arm',
  \$x if (\$x | str starts-with intel) => 'intel',
}
if \$env.SYS_CPU_VEND != null {
  \$env.REQ_URL_SH = \$"(\$env.REQ_URL_SH)&sysCpuVend=(\$env.SYS_CPU_VEND)"
}

\$env.SYS_HOST = sys host | get hostname | str lowercase
\$env.REQ_URL_SH = \$"(\$env.REQ_URL_SH)&sysHost=(\$env.SYS_HOST)"

\$env.SYS_OS_PLAT = match (uname | get kernel-name | str lowercase) {
  darwin => 'darwin',
  linux => 'linux',
  windows_nt => 'winnt',
  \$x => \$x,
}
\$env.REQ_URL_SH = \$"(\$env.REQ_URL_SH)&sysOsPlat=(\$env.SYS_OS_PLAT)"

if \$env.SYS_OS_PLAT == linux {
  if SYS_OS_DE not-in \$env and XDG_SESSION_DESKTOP in \$env {
    \$env.SYS_OS_DE = match (\$env.XDG_SESSION_DESKTOP | str lowercase) {
      kde => 'plasma',
      rpd | rpd-labwc => 'lxde',
      \$x => \$x,
    }
    \$env.REQ_URL_SH = \$"(\$env.REQ_URL_SH)&sysOsDe=(\$env.SYS_OS_DE)"
  }

  if ('/etc/os-release' | path exists) {
    open /etc/os-release
      | lines
      | parse '{key}={value}'
      | update value { |v| str trim --char '"' }
      | transpose --as-record --header-row
      | load-env

    if SYS_OS not-in \$env and ID in \$env {
      \$env.SYS_OS = \$env.ID | str lowercase
      \$env.REQ_URL_SH = \$"(\$env.REQ_URL_SH)&sysOs=(\$env.SYS_OS)"
    }

    if SYS_OS_LIKE not-in \$env and SYS_OS in \$env {
      \$env.SYS_OS_LIKE = if ID_LIKE in \$env { \$"(\$env.SYS_OS)_(\$env.ID_LIKE | str lowercase)" } else { \$env.SYS_OS } | str replace --all ' ' '_'
      \$env.REQ_URL_SH = \$"(\$env.REQ_URL_SH)&sysOsLike=(\$env.SYS_OS_LIKE)"
    }

    if SYS_OS_VERS not-in \$env and VERSION_ID in \$env {
      \$env.SYS_OS_VERS = \$env.VERSION_ID | str lowercase
      \$env.REQ_URL_SH = \$"(\$env.REQ_URL_SH)&sysOsVers=(\$env.SYS_OS_VERS)"
    }

    if SYS_OS_VERS_CODE not-in \$env and VERSION_CODENAME in \$env {
      \$env.SYS_OS_VERS_CODE = \$env.VERSION_CODENAME | str lowercase
      \$env.REQ_URL_SH = \$"(\$env.REQ_URL_SH)&sysOsVersCode=(\$env.SYS_OS_VERS_CODE)"
    }
  }
}

\$env.SYS_USER = whoami | str lowercase
\$env.REQ_URL_SH = \$"(\$env.REQ_URL_SH)&sysUser=(\$env.SYS_USER)"


def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'winnt_aarch64' => 'aarch64-pc-windows-msvc',
    'winnt_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'bin' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'winnt' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (winnt) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'winnt' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'winnt'] {
    opPrintWarn 'script is for darwin, linux, or winnt'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'winnt' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'bin' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

\`
`;
